--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,5 +1,7 @@
 {
   "pages": [
+    "pages/login/login",
+    "pages/time/time",
     "pages/index/index",
     "pages/userConsole/userConsole",
     "pages/storageConsole/storageConsole",
@@ -18,7 +20,7 @@
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "云开发 QuickStart",
+    "navigationBarTitleText": "工资查询",
     "navigationBarTextStyle": "black"
   },
   "sitemapLocation": "sitemap.json",
