--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -2,7 +2,7 @@
   "pages": [
     "pages/login/login",
     "pages/index/index",
-    
+    "pages/result/result",
     "pages/time/time",
     "pages/userConsole/userConsole",
     "pages/storageConsole/storageConsole",
