--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,21 +1,8 @@
 {
   "pages": [
     "pages/login/login",
-    "pages/index/index",
-    "pages/result/result",
     "pages/time/time",
-    "pages/userConsole/userConsole",
-    "pages/storageConsole/storageConsole",
-    "pages/databaseGuide/databaseGuide",
-    "pages/addFunction/addFunction",
-    "pages/deployFunctions/deployFunctions",
-    "pages/chooseLib/chooseLib",
-    "pages/openapi/openapi",
-    "pages/openapi/serverapi/serverapi",
-    "pages/openapi/callback/callback",
-    "pages/openapi/cloudid/cloudid",
-    "pages/im/im",
-    "pages/im/room/room"
+    "pages/result/result"   
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
